--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     </div>
                     <div class="contact-item">
                         <span>🌐</span>
-                        <span><a href="https://github.com/MrScrupulus">github</a></span>
-                        <span><a href="https://www.linkedin.com/in/emile-deballon-738a432b4/">linkedin</a></span>
+                        <span><a href="https://github.com/MrScrupulus" target="_blank">github</a></span>
+                        <span><a href="https://www.linkedin.com/in/emile-deballon-738a432b4/" target="_blank">linkedin</a></span>
                     </div>
                     <div class="contact-item">
                         <span>📍</span>
@@ -40,7 +40,9 @@
             <div class="section">
                 <h2 class="section-title">Profil</h2>
                 <div class="profil-text">
-                    Développeur web junior passionné par les technologies modernes et l'innovation. Fort d'une formation complète en développement web, je poursuis actuellement ma montée en compétences avec une formation en conception d'applications. Motivé par la résolution de problèmes complexes et la création d'expériences utilisateur exceptionnelles, je recherche une opportunité pour contribuer à des projets stimulants tout en continuant à développer mes compétences techniques.
+                    Développeur web junior passionné par les technologies modernes et l'innovation.
+                    Fort d'une formation complète en développement web, je poursuis actuellement ma montée en compétences avec une formation en conception d'applications. 
+                    Motivé par la résolution de problèmes complexes et la création d'expériences utilisateur exceptionnelles, je recherche une opportunité pour contribuer à des projets stimulants tout en continuant à développer mes compétences techniques.
                 </div>
             </div>
 
