--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
                 <h2 class="section-title">Profil</h2>
                 <div class="profil-text">
                     Développeur web junior passionné par les technologies modernes et l'innovation.
-                    Fort d'une formation complète en développement web, je poursuis actuellement ma montée en compétences avec une formation en conception d'applications. 
-                    Motivé par la résolution de problèmes complexes et la création d'expériences utilisateur exceptionnelles, je recherche une opportunité pour contribuer à des projets stimulants tout en continuant à développer mes compétences techniques.
+                    Fort d'une formation complète en développement web, 
+                    je poursuis actuellement ma montée en compétences avec une formation Concepteur Développeur d'applications. 
+                    Mon objectif à terme est d'approfondir mes connaissances dans le domaine de la cybersécuritée.
+                    Motivé par la résolution de problèmes complexes et la création d'expériences utilisateur dynamiques, 
+                    je recherche une opportunité pour contribuer à des projets stimulants dans un environnement collectif tout en continuant à développer mes acquis techniques.
                 </div>
             </div>
 
@@ -99,7 +102,7 @@
                 <div class="competence-category">
                     <div class="competence-title">Méthodologies</div>
                     <div class="competence-list">
-                        <span class="competence-tag">Agile/Scrum</span>
+                        <span class="competence-tag">Agile - Scrum/Kanban</span>
                         <span class="competence-tag">MVC</span>
                         <span class="competence-tag">Responsive Design</span>
                         
@@ -110,7 +113,7 @@
             <div class="section">
                 <h2 class="section-title">Projets Réalisés</h2>
                 <div class="formation-item">
-                    <div class="formation-title">Application recensement de poissons</div>
+                    <div class="formation-title">Application recensement de poissons (STF)</div>
                     <div class="formation-school">Projet de formation - Next.js/Node.js - PHP</div>
                     <div class="formation-date">2024-2025</div>
                 </div>
