--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <div class="profil-text">
                     Développeur web junior passionné par les technologies modernes et l'innovation.
                     Fort d'une formation complète en développement web, 
-                    je poursuis actuellement ma montée en compétences avec une formation Concepteur Développeur d'applications. 
-                    Mon objectif à terme est d'approfondir mes connaissances dans le domaine de la cybersécuritée.
+                    je poursuis actuellement ma montée en compétences sur le titre de Concepteur Développeur d'Applications. 
+                    Mon souhait sera à terme d'approfondir mes connaissances dans le domaine de la cybersécuritée.
                     Motivé par la résolution de problèmes complexes et la création d'expériences utilisateur dynamiques, 
                     je recherche une opportunité pour contribuer à des projets stimulants dans un environnement collectif tout en continuant à développer mes acquis techniques.
                 </div>
